# cpp-glossary

./: .gitignore  CMakeLists.txt  README.md
CPPGlossary/: CMakeLists.txt
CPPGlossary/include/: app_conf.hpp  const_macro.h  const_macro.hpp  typedefs.h  typedefs.hpp
CPPGlossary/src/: application_main.cpp
